Fixed z-index for menu in mobile version

--- a/src/less/components/navbar.less
+++ b/src/less/components/navbar.less
@@ -35,6 +35,7 @@ nav.navbar {
             display: flex;
             flex-direction: row;
             margin-left: auto;
+            z-index: 9;
 
             a {
                 text-decoration: none;
